package edu.fiuba.algo3.modelo.Mapa.PaqueteAreas;

import edu.fiuba.algo3.modelo.Unidades.Unidad;

public interface Area {

    void esPosibleAgregar(Unidad unidad);

}
