package edu.fiuba.algo3.modelo.Unidades.Turno;

import edu.fiuba.algo3.modelo.Jugador.Jugador;
import edu.fiuba.algo3.modelo.Mapa.Mapa;

public class Turno {
    private int turnos = 0;

    public void aumentarTurno(){
        turnos += 1;
    }

}
